--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -65,6 +65,14 @@
                     </ul>
                 </li>
                 <li class="nav-item">
+                    <a href="/cer">
+                        <div>
+                            <div class="sidebar-icon" id="ic-increasing-chart"></div>
+                            <span>탄소배출권</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/writingData">
                         <div>
                             <div class="sidebar-icon" id="ic-writing"></div>
