--- a/scss/_main_big.scss
+++ b/scss/_main_big.scss
@@ -62,6 +62,10 @@ main {
             #ic-writing {
               background-image: url("/images/svg/sidebar/writing-active.svg");
             }
+  
+            #ic-increasing-chart {
+              background-image: url("/images/svg/sidebar/increasing-chart-active.svg");
+            }
           }
         }
         
