--- a/template/emissions/workplace2.html
+++ b/template/emissions/workplace2.html
@@ -42,9 +42,9 @@
                 <table class="table table-borderless table-custom1">
                     <thead>
                     <tr>
-                        <th scope="col" style="width: 90px"><span>센서</span></th>
-                        <th scope="col" style=""><span>LED 전등</span></th>
-                        <th scope="col" style="width: 90px"><span>연결 상태</span></th>
+                        <th scope="col" style="width: 100px">센서</th>
+                        <th scope="col" style="">LED 전등</th>
+                        <th scope="col" style="width: 100px">연결 상태</th>
                     </tr>
                     </thead>
                     <tbody>
