--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -70,7 +70,7 @@
                         <div class="info-value">
                             <img id="today-compared-to-this-month-average-arrow" src="" alt=""><img src="" alt="">
                             <span id="today-compared-to-this-month-average">-</span>
-                        </div
+                        </div>
                         <div class="info-description">
                             <span>이번 달 평균 대비</span>
                         </div>
