--- a/scss/main.scss
+++ b/scss/main.scss
@@ -182,7 +182,7 @@ main {
             
             span {
               position: relative;
-              top: 2px;
+              top: 1px;
             }
             
             .sidebar-icon {
@@ -518,4 +518,18 @@ main {
 #pie-chart {
   height: 177px;
   width: 99.9%;
+}
+
+.login-container {
+  height: calc(100vh - 20px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  .login-content {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+  }
 }
