--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -24,6 +24,7 @@
                         <span>탄소배출량 산정 시스템</span>
                     </a>
                 </div>
+                <a href="/login">login</a>
                 <ul class="global-nav-links">
                     <li><a href="#" id="menu-toggle-btn"><img src="images/svg/menu.svg" alt=""></a>
                 </ul>
