remove useless span tag

--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -49,12 +49,12 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th scope="row"><span>LED / 모터</span></th>
+                        <th scope="row">메인 모터</th>
                         <td><input type="checkbox" id="main-motor-toggle-btn" class="switch"></td>
                         <td><img src="images/svg/green_circle.svg" alt=""></td>
                     </tr>
                     <tr>
-                        <th scope="row"><span>서브 모터</span></th>
+                        <th scope="row">서브 모터</th>
                         <td><input type="checkbox" id="sub-motor-toggle-btn" class="switch"></td>
                         <td><img src="images/svg/green_circle.svg" alt=""></td>
                     </tr>
