--- a/scss/_main_common.scss
+++ b/scss/_main_common.scss
@@ -1,4 +1,6 @@
 // common
+$borderColor: rgb(220, 224, 228);
+
 @mixin shadowDefault {
   box-shadow: 0 1px 3px rgba(0, 0, 0, .12),
               0 1px 2px rgba(0, 0, 0, .24);
@@ -6,9 +8,9 @@
 
 @mixin borderDefault($direction) {
   @if ($direction == top) {
-    border-top: 1px solid #DDDDDD;
+    border-top: 1px solid $borderColor;
   } @else if ($direction == bottom) {
-    border-bottom: 1px solid #DDDDDD;
+    border-bottom: 1px solid $borderColor;
   }
 }
 
