--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/writingData">
+                    <a href="/data-input">
                         <div>
                             <div class="sidebar-icon" id="ic-writing"></div>
                             <span>데이터 입력</span>
