--- a/template/datainput/home.html
+++ b/template/datainput/home.html
@@ -7,6 +7,10 @@
         <div class="col-12">
             <form action="" method="post">
                 <div class="form-group">
+                    <label for="location">지역</label>
+                    <input type="text" id="location" name="location" placeholder="">
+                </div>
+                <div class="form-group">
                     <label for="limestone">석회석</label>
                     <input type="text" id="limestone" name="limestone" placeholder="">
                 </div>
