fix switchery bug

--- a/template/emissions/workplace2.html
+++ b/template/emissions/workplace2.html
@@ -190,6 +190,6 @@
 </div>
 <script type="module" src="js/script/chart.js"></script>
 <script type="module" src="js/script/weather.js"></script>
-<script src="js/script/library/switchery.js"></script>
+<script type="module" src="js/script/library/switchery.js"></script>
 <script type="module" src="js/script/censor.js"></script>
 {%  endblock %}
