--- a/scss/main.scss
+++ b/scss/main.scss
@@ -358,6 +358,10 @@ main {
     }
   }
   
+  .chart-info--center {
+    justify-content: center;
+  }
+  
   .center-box {
     display: flex;
     height: 100%;
