--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -134,10 +134,10 @@
                     </li>
                     <li class="info-item">
                         <div class="info-value">
-                            <span id="">-</span>
+                            <span id="recent-two-months-prediction-average-error">-</span>
                         </div>
                         <div class="info-description">
-                            <span>정확도</span>
+                            <span>2개월간 평균 오차</span>
                         </div>
                     </li>
                 </ul>
