--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -24,7 +24,7 @@
                         <span>탄소배출량 산정 시스템</span>
                     </a>
                 </div>
-                <a href="/login">login</a>
+<!--                <a href="/login">login</a>-->
                 <ul class="global-nav-links">
                     <li><a href="#" id="menu-toggle-btn"><img src="images/svg/menu.svg" alt=""></a>
                 </ul>
@@ -65,14 +65,14 @@
                         </li>
                     </ul>
                 </li>
-                <li class="nav-item">
-                    <a href="/cer">
-                        <div>
-                            <div class="sidebar-icon" id="ic-increasing-chart"></div>
-                            <span>탄소배출권</span>
-                        </div>
-                    </a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a href="/cer">-->
+<!--                        <div>-->
+<!--                            <div class="sidebar-icon" id="ic-increasing-chart"></div>-->
+<!--                            <span>탄소배출권</span>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
                 <li class="nav-item">
                     <a href="/data-input">
                         <div>
