--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,15 @@
   }
 
   main {
-    position: absolute;
     top: 50px;
   }
   main .sidebar-nav {
     position: fixed;
     height: calc(100vh - 50px);
     width: 100%;
+    top: 50px;
     left: -100%;
     transition-duration: 0.5s;
-    z-index: 3;
   }
   main .sidebar--extended {
     left: 0;
@@ -61,8 +60,15 @@
   .card .center-box .box-value {
     font-size: 22px;
   }
+
+  .loading {
+    width: 100%;
+  }
 }
 @media (min-width: 768px) {
+  .global-nav-container {
+    position: relative;
+  }
   .global-nav-container .global-nav .logo a {
     transition-duration: 0.5s;
   }
@@ -142,6 +148,11 @@
   .card .center-box .box-value {
     font-size: 30px;
   }
+
+  .loading {
+    width: calc(100% - 250px - 1px);
+    left: 250px;
+  }
 }
 @font-face {
   font-family: Apple SD Gothic Neo;
@@ -209,12 +220,11 @@ select:last-child {
 }
 
 .global-nav-container {
-  position: relative;
   height: 50px;
   color: #222222;
   background-color: #FFFFFF;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  z-index: 100;
+  z-index: 1002;
 }
 .global-nav-container .global-nav {
   height: 100%;
@@ -271,6 +281,7 @@ select:last-child {
 
 main {
   display: flex;
+  position: relative;
   min-height: calc(100vh - 50px);
   width: 100%;
 }
@@ -278,7 +289,7 @@ main .sidebar-nav {
   background-color: #FFFFFF;
   color: #444444;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  z-index: 99;
+  z-index: 1001;
 }
 main .sidebar-nav .sidebar-nav-links > .nav-item {
   transition-duration: 0.5s;
@@ -577,6 +588,26 @@ main .content-container .content-main {
   height: 300px;
   display: flex;
   justify-content: center;
+}
+
+.loading {
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+  background-color: #F5F5F5;
+}
+
+.loading-img {
+  width: 100%;
+  height: 100%;
+  background: url("../images/svg/loading.svg") no-repeat;
+  background-position: center 40vh;
+}
+
+.loading--finish {
+  opacity: 0;
+  transition-delay: 1s;
+  transition-duration: 1s;
 }
 
 /*# sourceMappingURL=main.css.map */
