--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,12 +82,11 @@ select:last-child {
 }
 
 .global-nav-container {
-  position: relative;
   height: $headerHeight;
   color: $headerFontColor;
   background-color: $headerBackgroundColor;
   @include shadowDefault;
-  z-index: 100;
+  z-index: 1002;
   
   .global-nav {
     height: 100%;
@@ -153,6 +152,7 @@ select:last-child {
 
 main {
   display: flex;
+  position: relative;
   min-height: calc(100vh - #{$headerHeight});
   width: 100%;
   
@@ -160,7 +160,7 @@ main {
     background-color: $sidebarBackgroundColor;
     color: $sidebarFontColor;
     @include shadowDefault;
-    z-index: 99;
+    z-index: 1001;
     
     .sidebar-nav-links {
       
@@ -536,4 +536,24 @@ main {
     display: flex;
     justify-content: center;
   }
+}
+
+.loading {
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+  background-color: #F5F5F5;
+}
+
+.loading-img {
+  width: 100%;
+  height: 100%;
+  background: url("../images/svg/loading.svg") no-repeat;
+  background-position: center 40vh;
+}
+
+.loading--finish {
+  opacity: 0;
+  transition-delay: 1s;
+  transition-duration: 1s;
 }
