--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -83,6 +83,9 @@
                 </li>
             </ul>
         </nav>
+        <div class="loading">
+            <div class="loading-img"></div>
+        </div>
         <div class="content-container">
             <div class="content-main">
                 {% block content %}
