add loading animation

--- a/template/emissions/workplace2.html
+++ b/template/emissions/workplace2.html
@@ -73,7 +73,7 @@
                     <iframe id="today-emissions-chart" src="" frameborder="0"></iframe>
                 </div>
                 <ul class="chart-info">
-                    <li class="info-item">
+                    <li class="info-i">
                         <div class="info-value">
                             <span id="today-total-emissions">-</span>
                         </div>
